syntax = "proto3";

package examples;

option go_package = "github.com/your-username/redigo-streams/examples/proto";

import "google/protobuf/timestamp.proto";

// Example message types for demonstrations
message UserCreatedEvent {
  string user_id = 1;
  string email = 2;
  string name = 3;
  google.protobuf.Timestamp created_at = 4;
}

message EmailSendTask {
  string to = 1;
  string subject = 2;
  string body = 3;
  string template_id = 4;
  map<string, string> variables = 5;
}

message OrderCreatedEvent {
  string order_id = 1;
  string user_id = 2;
  double amount = 3;
  string currency = 4;
  repeated string item_ids = 5;
  google.protobuf.Timestamp created_at = 6;
}

message PaymentProcessTask {
  string payment_id = 1;
  string order_id = 2;
  double amount = 3;
  string currency = 4;
  string payment_method = 5;
  map<string, string> metadata = 6;
} 